Fix deprecated API usage for Java 21
- Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance() in:
  * GrammarTable.java
  * DefaultTreeDrawer.java
  * UnitPane.java
  * UselessPane.java
  * ChomskyPane.java

- Replace deprecated InputEvent mask constants with modern equivalents:
  * MenuConstants.java: CTRL_MASK -> CTRL_DOWN_MASK, META_MASK -> META_DOWN_MASK
  * SimulateNoClosureAction.java: SHIFT_MASK -> SHIFT_DOWN_MASK
  * SaveAsAction.java: SHIFT_MASK -> SHIFT_DOWN_MASK

- Remove deprecated SecurityManager usage:
  * NewAction.java: Remove SecurityManager check for exit permission
  * MenuBarCreator.java: Remove SecurityManager checks for print and exit

- Replace deprecated AccessControlException with SecurityException:
  * Universe.java: Catch SecurityException instead of AccessControlException

- Temporarily disable SVG export functionality:
  * ExportAction.java: Comment out Batik SVG imports and functionality due to compatibility issues