@@ -133,7 +133,7 @@ public class ChomskyPane extends JPanel {
 		ArrayList<Integer> list = new ArrayList<>();
 		for (int i = 0; i < editingGrammarModel.getRowCount() - 1; i++)
 			if (!converter.isChomsky(editingGrammarModel.getProduction(i)))
-				list.add(new Integer(i));
+							list.add(Integer.valueOf(i));
 		int[] ret = new int[list.size()];
 		for (int i = 0; i < ret.length; i++)
 			ret[i] = ((Integer) list.get(i)).intValue();
@@ -183,7 +183,7 @@ public class ChomskyPane extends JPanel {
 			return;
 		}
 		try {
-			Grammar g = (Grammar) grammar.getClass().newInstance();
+					Grammar g = (Grammar) grammar.getClass().getDeclaredConstructor().newInstance();
 			g.addProductions(p);
 			g.setStartVariable(grammar.getStartVariable());
 			FrameFactory.createFrame(g);
@@ -203,7 +203,7 @@ public class ChomskyPane extends JPanel {
 			return null;
 		}
 		try {
-			Grammar g = (Grammar) grammar.getClass().newInstance();
+					Grammar g = (Grammar) grammar.getClass().getDeclaredConstructor().newInstance();
 			g.addProductions(p);
 			g.setStartVariable(grammar.getStartVariable());
 			return g;
@@ -238,7 +238,7 @@ public class ChomskyPane extends JPanel {
 			editingGrammarModel.deleteRow(r[i]);
 			for (int j = ps.length - 1; j >= 0; j--) {
 				editingGrammarModel.addProduction(ps[j], r[i]);
-				Integer integer = new Integer(r[i]);
+							Integer integer = Integer.valueOf(r[i]);
 				list.add(0, integer);
 			}
 		}
